sources = files(
    'Application.vala',
    'Window.vala',
    'Settings.vala',
    'SettingsDconf.vala',
    'Utils/TimeUtil.vala',
    'Utils/StringUtil.vala',
    'Utils/StringPot.vala',
    'Widgets/Audio.vala',
    'Widgets/Dialog.vala',
    'Widgets/DialogOverwrite.vala',
    'Widgets/MessageDialog.vala',
    'Widgets/Toast.vala',
    'Widgets/LightDark.vala',
    'Widgets/Notify.vala',
    'Widgets/AplicaitonView.vala',
    'Widgets/StreamPc.vala',
    'Objects/Converter.vala',
    'Objects/Remover.vala',
    'Objects/CheckLink.vala'
)
